<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    tools:context=".EditorActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp">

        <EditText
            android:id="@+id/title_edit_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/book_title_hint"
            android:inputType="textCapWords"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/title_view"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/title_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:text="@string/book_title"
            app:layout_constraintBottom_toBottomOf="@+id/title_edit_view"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/author_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/author"
            app:layout_constraintBottom_toBottomOf="@+id/author_edit_view"
            app:layout_constraintStart_toStartOf="@+id/title_view"
            app:layout_constraintTop_toTopOf="@+id/author_edit_view" />

        <EditText
            android:id="@+id/author_edit_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/author_name_hint"
            android:inputType="textCapWords"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/title_edit_view"
            app:layout_constraintTop_toBottomOf="@+id/title_edit_view" />

        <EditText
            android:id="@+id/price_edit_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/price_hint"
            android:inputType="numberDecimal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/quantity_edit_view"
            app:layout_constraintTop_toBottomOf="@+id/quantity_edit_view" />

        <TextView
            android:id="@+id/price_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/price"
            app:layout_constraintBottom_toBottomOf="@+id/price_edit_view"
            app:layout_constraintStart_toStartOf="@+id/quantity_view"
            app:layout_constraintTop_toTopOf="@+id/price_edit_view" />

        <TextView
            android:id="@+id/quantity_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:text="@string/quantity"
            app:layout_constraintBottom_toBottomOf="@+id/quantity_edit_view"
            app:layout_constraintStart_toStartOf="@+id/author_view"
            app:layout_constraintTop_toTopOf="@+id/quantity_edit_view" />

        <EditText
            android:id="@+id/quantity_edit_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/quantity_hint"
            android:inputType="number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/author_edit_view"
            app:layout_constraintTop_toBottomOf="@+id/author_edit_view" />

        <TextView
            android:id="@+id/supplier_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/supplier"
            app:layout_constraintBottom_toBottomOf="@+id/supplier_spinner"
            app:layout_constraintStart_toStartOf="@+id/price_view"
            app:layout_constraintTop_toTopOf="@+id/supplier_spinner" />

        <TextView
            android:id="@+id/supplier_phone_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone"
            app:layout_constraintBottom_toBottomOf="@+id/supplier_phone_edit_view"
            app:layout_constraintStart_toStartOf="@+id/supplier_view"
            app:layout_constraintTop_toTopOf="@+id/supplier_phone_edit_view" />

        <EditText
            android:id="@+id/supplier_phone_edit_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:inputType="phone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/supplier_spinner"
            app:layout_constraintTop_toBottomOf="@+id/supplier_spinner" />

        <Spinner
            android:id="@+id/supplier_spinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:entries="@array/supplier_array"
            android:spinnerMode="dropdown"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/supplier_view"
            app:layout_constraintStart_toStartOf="@+id/price_edit_view"
            app:layout_constraintTop_toBottomOf="@+id/price_edit_view" />
    </android.support.constraint.ConstraintLayout>

</RelativeLayout>