<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ListView
        android:id="@+id/book_list_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <RelativeLayout
        android:id="@+id/empty_view_parent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true">

        <ImageView
            android:id="@+id/empty_view_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/main_image_margin_top"
            android:adjustViewBounds="true"
            android:contentDescription="@string/empty_view_image"
            android:scaleType="fitCenter"
            android:src="@drawable/empty_view_image" />

        <TextView
            android:id="@+id/empty_view_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/empty_view_title_text"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/empty_view_image"
            android:textAppearance="?android:textAppearanceMedium"/>

        <TextView
            android:id="@+id/empty_view_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/empty_view_subtitle_text"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/empty_view_title"
            android:textAppearance="?android:textAppearanceSmall"/>

    </RelativeLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/main_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="@dimen/fab_margin"
        android:src="@drawable/ic_books"/>

</RelativeLayout>