<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity">

    <android.support.v7.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/author_display_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Light.SearchResult.Subtitle"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/title_display_view"
                app:layout_constraintStart_toStartOf="@+id/title_display_view"
                app:layout_constraintTop_toBottomOf="@+id/title_display_view"
                tools:text="Author Name" />

            <TextView
                android:id="@+id/title_display_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Book Title" />
        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/cardView3"
        android:layout_width="128dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/cardView2"
        app:layout_constraintEnd_toEndOf="@+id/cardView"
        app:layout_constraintTop_toTopOf="@+id/cardView2">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/detail_price_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/price"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Tab"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/price_display_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/detail_price_view"
                tools:text="Price" />
        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toStartOf="@+id/cardView3"
        app:layout_constraintStart_toStartOf="@+id/cardView"
        app:layout_constraintTop_toBottomOf="@+id/cardView">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/quantity_increment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/quantity_increase_button_image"
                android:src="@drawable/ic_increment"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/quantity_display_view"
                app:layout_constraintTop_toBottomOf="@+id/detail_quantity_view" />

            <ImageButton
                android:id="@+id/quantity_decrement"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="16dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/quantity_decrease_button_image"
                android:src="@drawable/ic_decrement"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/quantity_display_view"
                app:layout_constraintTop_toBottomOf="@+id/detail_quantity_view" />

            <TextView
                android:id="@+id/quantity_display_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.SearchResult.Subtitle"
                app:layout_constraintBottom_toBottomOf="@+id/quantity_decrement"
                app:layout_constraintEnd_toEndOf="@+id/detail_quantity_view"
                app:layout_constraintStart_toStartOf="@+id/detail_quantity_view"
                app:layout_constraintTop_toTopOf="@+id/quantity_decrement"
                tools:text="Quantity" />

            <TextView
                android:id="@+id/detail_quantity_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/quantity"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Tab"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@+id/cardView"
        app:layout_constraintStart_toStartOf="@+id/cardView"
        app:layout_constraintTop_toBottomOf="@+id/cardView2">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/detail_supplier_phone_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Tab"
                app:layout_constraintBottom_toBottomOf="@+id/supplier_phone_display_view"
                app:layout_constraintStart_toStartOf="@+id/detail_supplier_view"
                app:layout_constraintTop_toTopOf="@+id/supplier_phone_display_view" />

            <TextView
                android:id="@+id/supplier_phone_display_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/supplier_call_button"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/supplier_display_view"
                app:layout_constraintTop_toBottomOf="@+id/supplier_display_view"
                app:layout_constraintVertical_bias="1.0"
                tools:text="Phone" />

            <TextView
                android:id="@+id/detail_supplier_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/supplier"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Tab"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/supplier_display_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toStartOf="@+id/supplier_call_button"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/detail_supplier_view"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Supplier Name" />

            <ImageButton
                android:id="@+id/supplier_call_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/phone_button_image"
                android:src="@drawable/ic_call"
                app:layout_constraintBottom_toBottomOf="@+id/supplier_phone_display_view"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.92"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/supplier_display_view" />
        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>

</android.support.constraint.ConstraintLayout>